--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
     <meta charset="UTF-8">
     <title>CV Ilya Userdnov</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <main>
-      <div class="left">
-        <div class="left-background-top"></div>
-        <div class="left-name">
+    <main class="container">
+      <div class="row">
+      <div class="left col-sm-6 col-12 col-lg-4">
+        <div class="left-background-top col-12"></div>
+        <div class="left-name col-12">
           <h2>Ilya <br> Userdnov </h2>
         </div>
         <div class="left-avatar">
@@ -30,7 +35,7 @@
         <br>
         <span>Russian</span>
       </div>
-      <div class="right">
+      <div class="right col-sm-6 col-12 col-lg-8">
         <div class="summary">
             <h3>Summary</h3>
             <span>Илья 14 лет хз че еще писать )</span>
@@ -61,6 +66,7 @@
 
         <div class="right-background-bottom"></div>
         </div>
+      </div>
     </main>
   </body>
 </html>
